@@ -199,9 +199,3 @@ STATEMENT_SELECT_WIKI_USERS = \
     as jam_wiki_user \
     where rownum > ? and rownum <= ? \
     order by rownum 
-# alter column has non-standard syntax for changing column types
-UPGRADE_063_ALTER_USER_CREATE_IP = \
-    alter table jam_wiki_user alter column create_ip_address set data type varchar(39)
-# alter column has non-standard syntax for changing column types
-UPGRADE_063_ALTER_USER_LAST_LOGIN_IP = \
-    alter table jam_wiki_user alter column last_login_ip_address set data type varchar(39)
