@@ -560,21 +560,6 @@ STATEMENT_SELECT_WIKI_USERS = \
         EXEC(@SQL) \
     END
 # alter table has different syntax with MS SQL
-UPGRADE_070_ADD_RECENT_CHANGE_CHARACTERS_CHANGED = \
-    alter table jam_recent_change add [characters_changed] int
-# alter table has different syntax with MS SQL
-UPGRADE_070_ADD_TOPIC_VERSION_CHARACTERS_CHANGED = \
-    alter table jam_topic_version add [characters_changed] int
-# alter table has different syntax with MS SQL
-UPGRADE_070_ADD_USER_EDITOR = \
-    alter table jam_wiki_user add editor VARCHAR(50)
-# alter table has different syntax with MS SQL
-UPGRADE_070_ADD_USER_EMAIL = \
-    alter table jam_wiki_user add email VARCHAR(100)
-# alter table has different syntax with MS SQL
-UPGRADE_070_ADD_USER_SIGNATURE = \
-    alter table jam_wiki_user add signature VARCHAR(255)
-# alter table has different syntax with MS SQL
 UPGRADE_080_ADD_FILE_VERSION_USER_DISPLAY = \
     alter table jam_file_version add wiki_user_display VARCHAR(100)
 # alter table has different syntax with MS SQL
