@@ -182,10 +182,6 @@ STATEMENT_INSERT_LOG_ITEMS_MOVE = \
     AND jam_topic.virtual_wiki_id = ? \
     AND jam_topic.redirect_to is not null \
     AND jam_topic_version.edit_type = ?
-UPGRADE_063_ALTER_USER_CREATE_IP = \
-    alter table jam_wiki_user modify create_ip_address varchar(39) not null
-UPGRADE_063_ALTER_USER_LAST_LOGIN_IP = \
-    alter table jam_wiki_user modify last_login_ip_address varchar(39) not null
 UPGRADE_080_ALTER_GROUP_ID = \
     alter table jam_group modify column group_id INTEGER AUTO_INCREMENT;
 UPGRADE_080_ALTER_GROUP_MEMBERS_ID = \
