@@ -295,28 +295,6 @@ STATEMENT_SELECT_WIKI_USERS = \
       where rownum <= ? \
     ) \
     where rowcount > ? 
-UPGRADE_063_ALTER_USER_CREATE_IP = \
-    alter table jam_wiki_user modify create_ip_address varchar(39) not null
-UPGRADE_063_ALTER_USER_LAST_LOGIN_IP = \
-    alter table jam_wiki_user modify last_login_ip_address varchar(39) not null
-UPGRADE_070_ADD_RECENT_CHANGE_CHARACTERS_CHANGED = \
-    alter table jam_recent_change add (characters_changed INTEGER)
-UPGRADE_070_ADD_TOPIC_VERSION_CHARACTERS_CHANGED = \
-    alter table jam_topic_version add (characters_changed INTEGER)
-UPGRADE_070_ADD_USER_EDITOR = \
-    alter table jam_wiki_user add (editor VARCHAR(50))
-UPGRADE_070_ADD_USER_EMAIL = \
-    alter table jam_wiki_user add (email VARCHAR(100))
-UPGRADE_070_ADD_USER_SIGNATURE = \
-    alter table jam_wiki_user add (signature VARCHAR(255))
-UPGRADE_070_UPDATE_TOPIC_VERSION_CHARACTERS_CHANGED = \
-    update jam_topic_version set characters_changed = ( \
-      select (dbms_lob.getlength(current_version.version_content) - dbms_lob.getlength(previous_version.version_content)) \
-      from jam_topic_version current_version \
-      left outer join jam_topic_version previous_version \
-      on current_version.previous_topic_version_id = previous_version.topic_version_id \
-      where jam_topic_version.topic_version_id = current_version.topic_version_id \
-    )
 UPGRADE_080_ADD_FILE_VERSION_USER_DISPLAY = \
     alter table jam_file_version add (wiki_user_display VARCHAR(100))
 UPGRADE_080_ADD_TOPIC_VERSION_VERSION_PARAMS = \
